Added links to Jubilee and Rogue projects

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       <h2>Here are some examples of my work.</h2>
     <div class="content-grid">
         <div class="project-img">
-            <img src="img/jubilee.png" alt="One-Page Website"/>
+            <a href="https://github.com/kelsey-mcduke/Jubilee-Austen"><img src="img/jubilee.png" alt="One-Page Website"/></a>
         </div>
         <div class="project-tile">
-            <h3>Jubilee Austin One Page Project</h3>
+            <h3><a href="https://github.com/kelsey-mcduke/Jubilee-Austen">Jubilee Austin One Page Project</a></h3>
             <p>One page site created using HTML and CSS styling. Project from Skillcrush Break into Tech program.</p>
         </div>
         <div class="project-img">
-            <img src="img/rogue.png" alt="Website from Comp"/>
+            <a href="https://github.com/kelsey-mcduke/rogue-responsive"><img src="img/rogue.png" alt="Website from Comp"/></a>
         </div>
         <div class="project-tile">
-            <h3>Rogue Pickings Comp and Responsive Project</h3>
+            <h3><a href="https://github.com/kelsey-mcduke/rogue-responsive">Rogue Pickings Comp and Responsive Project</a></h3>
             <p>One page site created from a Photoshop comp and then made responsive. Project from Skillcrush Break into Tech Program.</p>
         </div>
         <div class="project-img">
